flight offers retrieve and sent to frontend feature added